--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
                     <ul>
 
                         <li>
-                            <h3>HTML</h3>
-                            <p>Beginner</p>
+                            <h3>Programming Language</h3>
+                            <p>Python</p>
                         </li>
                         <li>
-                            <h3>CSS</h3>
-                            <p>Beginner</p>
+                            <h3>ML Libraries</h3>
+                            <p>scikit-learn</p>
                         </li>
                         <li>
-                            <h3>JavaScript</h3>
-                            <p>Beginner</p>
+                            <h3>Data Ananlysis and Visualization</h3>
+                            <p>Numpy, pandas, matplotlib</p>
                         </li>
                     </ul>
 
