update project details

--- a/index.html
+++ b/index.html
@@ -194,19 +194,25 @@
                 </div>
                 <div class="exp project-box">
                     <img src="./assets/project2.jpg" class="project-img">
-                    <h2>Project Title</h2>
+                    <h2>Resume Portfolio</h2>
                     <div class="button-container">
-                        <button class="btn">Github</button>
-                        <button class="btn">Live Demo</button>
+                        <button onclick="document.location='https://github.com/devmukul1504/resume'"
+                            class="btn">Github</button>
+                        <button onclick="document.location='https://devmukul1504.github.io/resume/'" class="btn">Live
+                            Demo</button>
                     </div>
 
                 </div>
                 <div class="exp project-box">
                     <img src="./assets/project3.jpg" class="project-img">
-                    <h2>Project Title</h2>
+                    <h2>Fake News Detection</h2>
                     <div class="button-container">
-                        <button class="btn">Github</button>
-                        <button class="btn">Live Demo</button>
+                        <button
+                            onclick="document.location='https://github.com/devmukul1504/fake-news-detection-in-machine-learning'"
+                            class="btn">Github</button>
+                        <button
+                            onclick="document.location='https://github.com/devmukul1504/fake-news-detection-in-machine-learning'"
+                            class="btn">Live Demo</button>
                     </div>
                 </div>
 
