--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                     <div class="button-container">
                         <button onclick="document.location='https://github.com/devmukul1504/8085-emulator.git'"
                             class="btn">Github</button>
-                        <button class="btn">Live Demo</button>
+                        <button onclick="document.location='https://github.com/devmukul1504/8085-emulator.git'"
+                            class="btn">Live Demo</button>
                     </div>
 
 
