--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                 <div class="exp project-box">
                     <img src="./assets/project1.jpg" class="project-img">
                     <h2>8085 Emulator</h2>
+                    <p>Language: C++</p>
                     <div class="button-container">
                         <button onclick="document.location='https://github.com/devmukul1504/8085-emulator.git'"
                             class="btn">Github</button>
@@ -196,6 +197,7 @@
                 <div class="exp project-box">
                     <img src="./assets/project2.jpg" class="project-img">
                     <h2>Resume Portfolio</h2>
+                    <p>Language: HTML, CSS</p>
                     <div class="button-container">
                         <button onclick="document.location='https://github.com/devmukul1504/resume'"
                             class="btn">Github</button>
@@ -207,12 +209,27 @@
                 <div class="exp project-box">
                     <img src="./assets/project3.jpg" class="project-img">
                     <h2>Fake News Detection</h2>
+                    <p>Language: Python</p>
                     <div class="button-container">
                         <button
                             onclick="document.location='https://github.com/devmukul1504/fake-news-detection-in-machine-learning'"
                             class="btn">Github</button>
                         <button
                             onclick="document.location='https://github.com/devmukul1504/fake-news-detection-in-machine-learning'"
+                            class="btn">Live Demo</button>
+                    </div>
+                </div>
+
+
+
+                <div class="exp project-box">
+                    <img src="./assets/tictactoe.jpg" class="project-img">
+                    <h2>Tic Tac Toe Game</h2>
+                    <p>Language: HTML, CSS, JS</p>
+                    <div class="button-container">
+                        <button onclick="document.location='https://github.com/devmukul1504/tictactoe-game'"
+                            class="btn">Github</button>
+                        <button onclick="document.location='https://devmukul1504.github.io/tictactoe-game/'"
                             class="btn">Live Demo</button>
                     </div>
                 </div>
